if there is a signup error, the signup form is automatically displayed. Also fixed spacing on from in mobile

--- a/src/components/landing/LandingPage.css
+++ b/src/components/landing/LandingPage.css
@@ -128,7 +128,7 @@ html {
   transform: translateX(100%);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 .landing__login.show {
@@ -156,10 +156,10 @@ html {
 .landing__signupContainer {
   display: flex;
   height: 100%;
-  justify-content: space-evenly;
+
   align-items: center;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .or_seperator {
